Fix /players overflow-y

--- a/static/css/lol-game-review.css
+++ b/static/css/lol-game-review.css
@@ -1,5 +1,5 @@
 .lol-game-review {
-    width: auto;
+    height: fit-content;
     background-color: var(--back-color2);
     border-radius: 5px;
     padding-top: 10px;
