--- a/static/css/players.css
+++ b/static/css/players.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     padding-top: 48px;
+    padding-bottom: 48px;
+    overflow-y: scroll;
 }
 
 .lol-game-review {
